// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `""`;

exports[`2. a single child element 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div>
            <ForwardRef>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </ForwardRef>
          </div>
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;

exports[`3. two child elements 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div>
            <ForwardRef>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </ForwardRef>
            <ForwardRef>
              <div />
            </ForwardRef>
            <ForwardRef>
              <div>
                <div>
                  standard-2
                </div>
              </div>
            </ForwardRef>
          </div>
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;

exports[`4. three child elements 1`] = `
<ForwardRef>
  <div>
    <ForwardRef>
      <div>
        <ForwardRef>
          <div>
            <ForwardRef>
              <div>
                <div>
                  standard-1
                </div>
              </div>
            </ForwardRef>
            <ForwardRef>
              <div />
            </ForwardRef>
            <ForwardRef>
              <div>
                <div>
                  standard-2
                </div>
              </div>
            </ForwardRef>
            <ForwardRef>
              <div />
            </ForwardRef>
            <ForwardRef>
              <div>
                <div>
                  standard-3
                </div>
              </div>
            </ForwardRef>
          </div>
        </ForwardRef>
      </div>
    </ForwardRef>
  </div>
</ForwardRef>
`;
